# CyberHammer

./: .env.template  .gitignore  CyberHammer.cmd  CyberHammer.ps1  Dockerfile.main.telegram  Dockerfile.mcp-manager  Dockerfile.postgresql  Dockerfile.telegram  Dockerfile.ui  README.md  agent.py  api_test.ps1  checkpointers.py  config.py  cyberhammer_gui.cmd  docker-compose-base.yml  docker-compose.yml  endpoint-cli.py  endpoint-telegram.py  endpoint-ui.py  main.ipynb  main.py  main.telegram.py  pyproject.toml  requirements.txt  run_cyberhammer_gui.ps1  run_windows.ps1  test_pg_database.ipynb  test_weaviate_vecbase.ipynb
.devcontainer/: devcontainer.json
.streamlit/: config.toml
config/: settings.yml
notebooks/: mcp_agent.ipynb  vector_search.ipynb
pages/: __init__.py  chat_agent.py  markdown_convert.py  mcp_agent.py
requirement/: cyberhammer_check.ps1
research_copilot/: run_langflow.cmd  run_langflow.ps1
research_copilot/models/: CyberHammer Research Copilot.json
sql/: init.sql
test/gemini_autogen/: main.py  requirements.txt
test/langchain_test/: chat_with_LCEL.ipynb  chat_with_doc.ipynb  chat_with_pdf.ipynb  chat_with_search.ipynb  main.ipynb  play_with_agent.ipynb  requirements.txt
test/langflow_test/: requirements.txt  run_langflow.ps1
tools/: __init__.py  web_search.py
tools/dots_ocr/: parser.py
tools/dots_ocr/model/: inference.py
tools/dots_ocr/utils/: doc_utils.py  format_transformer.py  output_cleaner.py
web_gui/: 01_Super_Chat.py  Chat.py  cyberhammer_web_gui.ps1  docker-compose.yaml  dockerfile  main.py  requirements.txt
web_gui/LLM/: chat_with_history.py
web_gui/config/: proxy.py
web_gui/pages/: 02_Chat_with_History.py  03_Pure_Chat.py  Chat with History.py  Chat with Search.py
