[project]
name = "cyberhammer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.8.0",
    "deepagents>=0.4.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.4",
    "md2tgmd>=0.3.10",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.1",
    "python-telegram-bot[socks]>=22.6",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.46",
    "sympy>=1.14.0",
    "weaviate-client>=4.19.4",
]

