[project]
name = "cyberhammer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.3",
    "fastmcp>=3.2.0",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.4",
    "markitdown[docx,pptx,xls,xlsx]>=0.1.5",
    "numpy>=2.4.3",
    "openai>=2.26.0",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.46",
    "sympy>=1.14.0",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "weaviate-client>=4.19.4",
]

[project.optional-dependencies]
telegram = [
    "md2tgmd>=0.3.10",
    "python-telegram-bot[socks]>=22.6",
]
ui = [
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
